--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine",
+    "start": "nodemon server/server.js",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +14,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "sharp": "^0.31.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.3",
+    "@types/sharp": "^0.31.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
