--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jasmine",
     "start": "nodemon server/server.js",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "lint": "eslint",
+    "format": "prettier  --config .prettierrc 'src/**/*.ts' --write"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,12 @@
   "devDependencies": {
     "@types/node": "^18.11.3",
     "@types/sharp": "^0.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
+    "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
