--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "supertest": "^6.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/jasmine": "^4.3.0",
     "@types/node": "^18.11.3",
     "@types/sharp": "^0.31.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fs": "*",
+    "jasmine": "^4.4.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
