--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "fs": "*",
     "jasmine": "^4.4.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
