--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "sharp": "^0.31.1",
-    "supertest": "^6.3.0"
+    "sharp": "^0.31.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
@@ -33,6 +32,7 @@
     "jasmine": "^4.4.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
+    "supertest": "^6.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
