Added NVM instructions and warning to README file | Tweaked dependencies to ensure I was not using globals on my own maching

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^18.11.3",
     "@types/sharp": "^0.31.0",
     "@types/supertest": "^2.0.12",
+    "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.25.0",
@@ -30,6 +31,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "fs": "*",
     "jasmine": "^4.4.0",
+    "jasmine-ts": "^0.4.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "supertest": "^6.3.1",
