Changed elint config file and 'lint' script in package.json to address project reviewer's change request

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jasmine",
     "start": "nodemon ./dist/src/server/server",
     "build": "npx tsc",
-    "lint": "eslint",
+    "lint": "eslint . --ext .ts",
     "format": "prettier  --config .prettierrc 'src/**/*.ts' --write"
   },
   "keywords": [],
