--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "dist/src/server/server.js",
   "scripts": {
-    "start": "node ./dist/src/server/server",
+    "start": "nodemon ./dist/src/server/server",
     "spec": "jasmine",
     "build": "npx tsc",
     "lint": "eslint . --ext .ts",
     "format": "prettier  --config .prettierrc 'src/**/*.ts' --write",
     "test": "npm run build && npm run spec"
-
   },
   "keywords": [],
   "author": "",
@@ -34,6 +33,7 @@
     "fs": "*",
     "jasmine": "^4.4.0",
     "jasmine-ts": "^0.4.0",
+    "keyv": "^4.5.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "supertest": "^6.3.1",
